# standup

./: README.md  manifest.json
bundle/: index.html
executas/standup-playbook/: SKILL.md  executa.json
executas/standup-tool/: executa.json  pyproject.toml  standup_tool.py
